--- a/package.json
+++ b/package.json
@@ -19,13 +19,22 @@
   },
   "homepage": "https://github.com/Velkof/TodayIHadV4#readme",
   "devDependencies": {
+    "cross-env": "^5.0.1",
     "nodemon": "^1.11.0",
     "webpack": "^2.6.1"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
+    "errorhandler": "^1.5.0",
     "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.3",
+    "handlebars": "^4.0.10",
+    "method-override": "^2.3.9",
     "mongoose": "^4.10.6",
+    "morgan": "^1.8.2",
+    "pretty-error": "^2.1.0",
     "underscore": "^1.8.3"
   }
 }
