--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "client:build": "nodemon server/boot.js",
+    "client:watch": "webpack --hide-modules --watch --config client/webpack.config.js",
     "server:start": "nodemon server/boot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,9 +21,14 @@
   },
   "homepage": "https://github.com/Velkof/TodayIHadV4#readme",
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.1",
     "nodemon": "^1.11.0",
-    "webpack": "^2.6.1"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
@@ -31,6 +38,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.3",
     "handlebars": "^4.0.10",
+    "jquery": "^3.2.1",
     "method-override": "^2.3.9",
     "mongoose": "^4.10.6",
     "morgan": "^1.8.2",
