--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
     "nodemon": "^1.11.0",
+    "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
