--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.3",
     "handlebars": "^4.0.10",
     "jquery": "^3.2.1",
