--- a/package.json
+++ b/package.json
@@ -29,15 +29,20 @@
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "extended-define-webpack-plugin": "^0.1.3",
+    "file-loader": "^0.11.2",
     "nodemon": "^1.11.0",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "auth0-lock": "^10.18.0",
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "bootstrap-material-design": "^0.5.10",
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
@@ -47,6 +52,7 @@
     "express-session": "^1.15.3",
     "handlebars": "^4.0.10",
     "jquery": "^3.2.1",
+    "jwt-decode": "^2.2.0",
     "method-override": "^2.3.9",
     "mongoose": "^4.10.6",
     "morgan": "^1.8.2",
