--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "validator": "^7.2.0"
   }
 }
