--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,5 @@
-API_URL=http://localhost:90002
+API_URL=
 
-AUTH0_CLIENT_ID=YMaeM9OciPKhuqerE13BScW1SgoYC5jP
-AUTH0_DOMAIN=marjanian.eu.auth0.com
-AUTH0_CALLBACK_URL=http://localhost:9000/dashboard
+AUTH0_CLIENT_ID=
+AUTH0_DOMAIN=
+AUTH0_CALLBACK_URL=
