--- a/server/.env.example
+++ b/server/.env.example
@@ -8,5 +8,5 @@ DB_NAME=
 
 PUBLIC_PATH=/public
 
-AUTH0_CLIENT_ID=YMaeM9OciPKhuqerE13BScW1SgoYC5jP
-AUTH0_SECRET=KKYyPM0YT40Nz6h-e4Wb5njmz9b09wYsgKpgwcHGy3dobemkVKUXSHvm2lngNTpp
+AUTH0_CLIENT_ID=
+AUTH0_SECRET=
