Add daily stats chart on dashboard

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "bootstrap-material-design": "^0.5.10",
+    "chart.js": "^2.6.0",
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
@@ -58,6 +59,7 @@
     "morgan": "^1.8.2",
     "pretty-error": "^2.1.0",
     "react": "^15.6.1",
+    "react-chartjs-2": "^2.5.5",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
