--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jwks-rsa": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "method-override": "^2.3.9",
+    "moment": "^2.18.1",
     "mongoose": "^4.10.6",
     "morgan": "^1.8.2",
     "pretty-error": "^2.1.0",
