--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "underscore": "^1.8.3",
     "validator": "^7.2.0"
   }
