--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "qs": "^6.5.0",
     "react": "^15.6.1",
     "react-chartjs-2": "^2.5.5",
+    "react-datepicker": "^0.53.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
